[gd_scene load_steps=4 format=3 uid="uid://don28o3pwunq6"]

[ext_resource type="Script" path="res://Scripte/blood_timer_ui.gd" id="1_5uy0y"]
[ext_resource type="Texture2D" uid="uid://d2bdxlhqgg0fm" path="res://Sprites/Prototyping Assets/Phiole_Empty.png" id="2_mdi7t"]
[ext_resource type="Texture2D" uid="uid://dy18t6thrb1ky" path="res://Sprites/Prototyping Assets/Phiole_Full.png" id="3_j2vph"]

[node name="BloodTimerUI" type="Node2D"]
script = ExtResource("1_5uy0y")

[node name="BloodTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BloodTimerBar" type="TextureProgressBar" parent="."]
offset_left = 570.0
offset_top = 7.0
offset_right = 610.0
offset_bottom = 391.0
max_value = 5.0
step = 0.1
value = 5.0
fill_mode = 3
texture_under = ExtResource("2_mdi7t")
texture_progress = ExtResource("3_j2vph")

[node name="BloodTimerLabel" type="Label" parent="."]
offset_left = 724.0
offset_top = 31.0
offset_right = 764.0
offset_bottom = 54.0

[connection signal="timeout" from="BloodTimer" to="." method="_on_blood_timer_timeout"]
